--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-        <header class="logo-header">
-            <img src="img/coffee/490587591_1085326150281090_2057919984710021726_n.JPG" alt="logo">
+        <header id="logo-header">
+            <a href="#logo"><img src="img/coffee/490587591_1085326150281090_2057919984710021726_n.JPG" alt="logo" id="logo"></a>
         </header>
 
         <nav class="nav-bar">
@@ -43,9 +43,10 @@
             </div>
         </section>
 
-
         <section class="Menu">
-                
+                <div class="menu-container">
+                    
+                </div>
         </section>
      </main>
 <script src="script.js"></script>
